public/css/style.css
a {
    color: #B0B7C4;
    text-decoration: none;
}

body {
    height: 100%;
    background-color: #414449;
    display: flex;
    flex-direction: column;
    margin: 0;
    align-items: center;
}

footer {
    position: absolute;
    bottom: 0px;
    background-color: #B0B7C4;
    height: 100px;
    width: 100%;
    text-align: center;
    padding-bottom: 10px;
}

h1 {
    text-align: center;
    color: #B0B7C4;
}

header {
    width: 99%;
    text-align: center;
    font-size: xx-large;
    color: #B0B7C4;
    border: 5px groove;
    background-image: linear-gradient( #414449, #111827, black);
}

img {
    height: 50px;
    width: 50px;
    clip: rect(100px, 100px);
}

nav {
    width: 100%;
    display: flex;
    justify-content: start;
}

/* INDEX */
.main {
    display: flex;
    flex-direction: column;
    border: 4px ridge;
    background-image: linear-gradient( #414449, #262B33, #262B33, #262B33, black);
    color: #B0B7C4;
    overflow-y: scroll;
    margin-left: 10px;
}

.main-top {
    width: 100%;
    height: 100px;
    border-top: 5px groove;
    border-bottom: 5px groove;
}

.top-headings {
    display: flex;
    flex-direction: row;
    list-style: none;
    justify-content: space-around;
    padding: 0;
    height: inherit;
    margin: 0px;
}

.top-headings :nth-child(1) {
    padding-top: 20px;
}
.top-headings :nth-child(2) {
    padding-top: 20px;
}
.top-headings :nth-child(5) {
    padding-top: 20px;
}

.top-headings li {
    width: 100%;
    border: black 1px solid;
    text-align: center;
    font-size: 40px;
}

.index {
    display: flex;
    flex-direction: column;
}

.index .entry {
    display: flex;
    flex-direction: row;
    list-style: none;
    padding: 0;
    margin: 0px;
    font-size: 30px;
    height: 40px;
    text-align: center;
    border-bottom: 2px solid black;
}

.entry li {
    border: 2px black solid;
    width: 200px;
}

.main-new, .main-show{
    display: flex;
    justify-content: center;
    width: 90%;
}

.main-new form{
    border: 5px ridge;
    background-image: linear-gradient( #414449, #111827, black);
    color: #B0B7C4;
    width: 50%;
    font-size: 40px;
    display: flex;
    flex-wrap: wrap;
    flex-direction: column;
    align-items: flex-start;
    align-content: center;
}

.main-new form input {
    font-size: 20px;
    margin: 20px auto;
}

textarea {
    height: 100px;
    resize: none;
    width: inherit;
}

.show {
    border: 5px ridge;
    background-image: linear-gradient( #414449, #111827, black);
    color: #B0B7C4;
    width: 50%;
    font-size: 40px;
    display: flex;
    flex-wrap: wrap;
    flex-direction: column;
    align-items: flex-start;
    align-content: center;
    
}

.show label, textarea, form {
    margin: auto 20px;
    padding: 5px;
}

.show form {
    text-align: center;
    margin:0 auto;
}

input[type="submit"], input[type="button"]{
    width: 70px;
    height: 70px;
    border: solid ridge;
    border-radius: 50%;
    background-color: azure;

}

.button-expense {
    margin: auto;
    margin-top: 7px;
    text-align: center;
    border: 1px black solid;
    width: 70%;
    height: 70%;
    display: flex;
    flex-direction: row;
}

.btnExpenseLeft, .btnExpenseRight {

    width: inherit;
    height: 20px;
    margin: 0;
    padding: 0;
    background-color: black;
}

#clear {
    all: unset;
}

#frmDelete {
    margin: 0;
    width: 20px;
    bottom: 0;
}

#lblNotes {
    text-align: start;
}

/* LOGIN */
.divLogin {
    align-content: center;
    margin: 0 auto;
}

.divLogin form {
    border: 5px groove;
    display: flex;
    flex-direction: column;
    align-items: flex-end;
    width: fit-content;
    margin: 20px auto;
    font-size: larger;
    color: #B0B7C4;
    width: 100%;
}

.divLogin form input[type="text"], input[type="password"]  {
    width: 150px;
    height: 30px;
    margin: 10px auto;
}

.btnsLogin {
    width: 100%;
    display: flex;
    justify-content: space-between;
}

#btnRegister {
    font-size: 20px;
    margin: 20px auto;
}

#pLoginMsg, #pRegisterMsg {
    color: rgb(255, 86, 86);
    font-size: x-large;
    text-align: center;
}

/* MENU BUTTON */
#button-outer, #button-back {
    width: 80px;
    height: 80px;
    border: 5px double gray;
    border-radius: 50%;
    background: #414449;
    left: 100px;
}

#button-inner {
    width: auto;
    display: flex;
    flex-direction: column;
    align-items: center;
    color: white;
    font-size: 50px;
    position: relative;
    top: 5px;
}

.button-clicked {
    color: white;
    text-decoration: none;
}

/* MOBILE VERSION */

@media only screen and (max-width: 1024px){
    h1 {
        width: 98%;
        font-size: xx-large;
    }

    .main  {
        width: 98%;
        height: 100%;
        overflow-y: scroll;
        margin: 0 10px 15% 10px;
    }

    .main-top, .index, .entry {
        width: 100%;
        height: auto;
    }

    .top-headings {
        width: 100%;
        height: auto;
        align-items: center;
    }
    
    .top-headings li {
        font-size: 100%;
        text-align: center;
    }

    .entry {
        align-items: center;
    }

    .entry li {
        height: 100%;
        font-size: 50%;
        text-align: center;
    }

    footer {
        height: 5%;
    }

    footer > p {
        font-size: small;
        margin: 0;
    }

    footer > a > img {
        margin-top: -5px;
        scale: 50%;
    }

    /* Show */
    .main-show, .main-new, .main-new form, .show {
        width: 100%;
        margin: 0;
    }

    .main-new form label {
        margin-left: 20px;
    }

    input[type="submit"] {
        color: #B0B7C4;
    }


}

